# idps

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  docker-compose.yml
.github/workflows/: cloud-ci.yml  deploy.yml  frontend-ci.yml  vehicle-ci.yml
cloud/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
cloud/common/: __init__.py  config.py  database.py
cloud/common/middleware/: __init__.py  auth.py  error_handler.py  logging.py
cloud/common/utils/: __init__.py  crypto.py  logger.py  response.py  validator.py
docker/clickhouse/init/: 01-init.sql
docker/mysql/conf/: my.cnf
docker/mysql/init/: 01-init.sql
docs/: DEVELOPMENT.md  GITHUB_ACTIONS.md  MAKEFILE.md  PHASE1-COMPLETION-REPORT.md  UV_GUIDE.md
scripts/: check-deps.sh  init_db.py  quickstart.sh
specs/: 0001-spec.md  0002-design.md  0003-implementation-plan.md  instructions-supplement.md  instructions.md
vehicle/: .gitignore  CMakeLists.txt  README.md  build.sh
vehicle/cmake/: toolchain-aarch64.cmake
vehicle/config/: idps.conf.sample
vehicle/src/common/: CMakeLists.txt
vehicle/src/connector/: CMakeLists.txt
vehicle/src/daemon/: CMakeLists.txt
vehicle/src/firewall_probe/: CMakeLists.txt
vehicle/src/host_probe/: CMakeLists.txt
vehicle/src/network_probe/: CMakeLists.txt
